# Auto-Correcting-Rag-Agent

./: README.md
auto-corrector-rag-frontend/: README.md  angular.json  package-lock.json  package.json
auto-corrector-rag-frontend/src/: index.html  styles.css
auto-corrector-rag-frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
auto-corrector-rag-frontend/src/app/core/models/: agent.model.ts  evaluation.model.ts  health.model.ts  ingestion.model.ts
auto-corrector-rag-frontend/src/app/core/services/: agent-api.service.ts  evaluation-api.service.ts  health-api.service.ts  ingestion-api.service.ts  sse.service.ts
auto-corrector-rag-frontend/src/app/core/state/: agent-session.store.ts  evaluation.store.ts  library.store.ts  system-status.store.ts
auto-corrector-rag-frontend/src/app/features/system-health/: system-health.page.ts
auto-corrector-rag-frontend/src/app/features/workspace/: workspace.page.ts
auto-corrector-rag-frontend/src/environments/: environment.prod.ts  environment.ts
backend/: .env.example  .gitignore  ANGULAR_INTEGRATION.md  README.md  pyproject.toml
backend/src/rag_agent/: __init__.py  main.py
backend/src/rag_agent/controllers/: agent_controller.py  evaluation_controller.py  health_controller.py  ingestion_controller.py
backend/src/rag_agent/core/: config.py  llm_factory.py  logging.py
backend/src/rag_agent/models/: grading.py  schemas.py  state.py
backend/src/rag_agent/repositories/: document_repository.py  vector_repository.py
backend/src/rag_agent/services/: agent_service.py  chains.py  evaluation_service.py  ingestion_service.py  nodes.py  prompts.py  workflow.py
backend/src/rag_agent/services/tools/: vector_search.py  web_search.py
(+8 files in other folders)
