[project]
name = "rag-agent-backend"
version = "0.2.0"
description = "Auto-Correcting Academic Research Agent — FastAPI backend (LangGraph + multi-provider LLM)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ENSET — Distributed Systems & AI" }]

dependencies = [
    # API layer
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",

    # LangGraph + LangChain core
    "langgraph>=0.2.40",
    "langgraph-checkpoint>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",

    # Provider integrations (all optional at runtime — picked by factory)
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-xai>=0.1.0",
    "langchain-huggingface>=0.1.0",

    # Vector store + ingestion
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.4",
    "pypdf>=4.3.0",

    # Web search tools
    "duckduckgo-search>=6.2.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",

    # Local embedding fallback (no external key needed)
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
rag-api = "rag_agent.main:run"
rag-ingest = "rag_agent.services.ingestion_service:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]

[tool.ruff]
line-length = 99
target-version = "py311"
